--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,6 +25,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build netmauidevops/MauiApp1.csproj -c Release -f net6.0-android --no-restore
+      run: dotnet build MauiApp1.csproj -c Release -f net6.0-android --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
